added pyscript in head

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 </head>
 <body>
     
+    <div id="output" class="text-3xl"></div>
+    <py-script>
+        
+    </py-script>
 </body>
 </html>
