--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     
     <div id="output" class="text-3xl"></div>
     <py-script>
-        
+        def sumNum(x,y):
+            return x+y
+        sum = sumNum(2,7)
+        pyscript.write('output',sum)
     </py-script>
 </body>
 </html>
