adding script through external .py file

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                 pyscript.write('output3',f"my array is {arr}")
             </py-script>
         </div>
+        <hr class="m-5">
+        <div>
+            <div id="output4" class="text-3xl"></div>
+            <py-script src="./main.py"> </py-script>
+        </div>
         
     </div>
     
