adding multiple files using paths in py-env

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Document</title>
     <py-env>
         - numpy
+        - paths:
+            - ./utils.py
     </py-env>
 </head>
 <body>
